<resources>
    <string name="app_name">Tn pharmacy</string>
    <string name="title">Welcome To Tn Pharmacy</string>
    <string name="in">Sing In</string>
    <string name="up">Sing Up</string>
    <string name="gmailup">Sing Up with Google</string>
    <string name="emailup">Sing Up with Email</string>
    <string name="gmailin">Sing In with Google</string>

    <string name="emailin">Sing IN with Email</string>
    <string name="forgetpass">Forget password ?</string>
    <string name="title_activity_singup">Singup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_map">map</string>

</resources>


